--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400..800&family=Roboto:wght@300;400;500;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -17,12 +17,47 @@ nav {
 
 nav ul li {
   list-style: none;
-  font-size: 2.1rem; 
+  font-size: 2.1rem;
   font-weight: 500;
 }
 
-.gameContainer{
+.gameContainer {
   display: flex;
   justify-content: center;
-  margin-top:3rem;
+  margin-top: 3rem;
+  flex-wrap: wrap;
+}
+.container {
+  display: grid;
+  grid-template-rows: repeat(3, 10vw);
+  grid-template-columns: repeat(3, 10vw);
+  margin: 1.6rem;
+}
+.box {
+  border: 1px solid #757575;
+  font-size: 7vw;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &:hover {
+    background-color: #f0f3f8;
+  }
+}
+.bt-0 {
+  border-top: 0;
+}
+.bb-0 {
+  border-bottom: 0;
+}
+.bl-0 {
+  border-left: 0;
+}
+.br-0 {
+  border-right: 0;
+}
+
+.gameInfo {
+  padding: 0 5rem;
+  font-family: "Baloo Bhaina 2", cursive;
 }
