feat: update box inner text on clicked

--- a/style.css
+++ b/style.css
@@ -61,3 +61,7 @@ nav ul li {
   padding: 0 5rem;
   font-family: "Baloo Bhaina 2", cursive;
 }
+.gameInfo h1{
+  font-size: 4vw;
+  font-family: "Baloo Bhaina 2", cursive;
+}
